// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The component should render 1`] = `
<DocumentFragment>
  <div
    class="rectangle"
    role="button"
    style="left: 0px; top: 0px; width: 200px; height: 100px;"
  >
    <div
      class="resizeHandle"
      role="slider"
    />
  </div>
</DocumentFragment>
`;

exports[`The component should render with correct positions 1`] = `
<DocumentFragment>
  <div
    class="rectangle"
    role="button"
    style="left: 10px; top: 20px; width: 200px; height: 100px;"
  >
    <div
      class="resizeHandle"
      role="slider"
    />
  </div>
</DocumentFragment>
`;

exports[`The component should render with minimum size notification 1`] = `
<DocumentFragment>
  <div
    class="rectangle"
    role="button"
    style="left: 0px; top: 0px; width: 200px; height: 100px;"
  >
    <div
      class="resizeHandle"
      role="slider"
    />
  </div>
  <div
    class="minSizeNotification"
    style="left: 0px; top: 100px; width: 200px;"
  >
    sulu_media.min_size_notification
  </div>
</DocumentFragment>
`;
